--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,9 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+# Library System Configuration
+library.loan.duration.months=1
+library.notification.days.before=5
+library.borrow.limit.book=5
+library.borrow.limit.other=10
